clusters/home/infra/envoy-gateway/gatewayclass.yaml
---
# GatewayClass defines the class of Gateway that Cilium will manage
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cilium
spec:
  controllerName: io.cilium/gateway-controller
  description: Cilium Gateway API implementation using Envoy
