clusters/home/infra/envoy-gateway/test-app.yaml
---
# Simple test application
apiVersion: v1
kind: Pod
metadata:
  name: echo-server
  namespace: default
  labels:
    app: echo
spec:
  containers:
    - name: echo
      image: ealen/echo-server:latest
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  namespace: default
spec:
  selector:
    app: echo
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-route
  namespace: default
spec:
  parentRefs:
    - name: home-gateway
      namespace: default
  hostnames:
    - "echo.local"
  rules:
    - backendRefs:
        - name: echo-service
          port: 80
